<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="15dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="15dp">

    <TextView
        android:id="@+id/titleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/addPractical"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/titlePracTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pracTitle" />

    <EditText
        android:id="@+id/txtPracTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

        <TextView
            android:id="@+id/titlePracDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pracDesc" />

        <EditText
            android:id="@+id/txtPracDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="3"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titlePracMarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/pracMarks" />

        <EditText
            android:id="@+id/txtPracMarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="5" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAddPractical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:text="@string/addButton"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:orientation="vertical"
        android:layout_marginEnd="10dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEditPrac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/dark_grey"
            android:onClick="onClick"
            android:src="@drawable/ic_edit" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnDeletePrac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/dark_grey"
            android:onClick="onClick"
            android:src="@drawable/ic_delete" />
    </LinearLayout>

</LinearLayout>